# Borgitory

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_IMPROVEMENT.md  CLOUD_PROVIDERS.md  CROSS_PLATFORM_PATH_SOLUTION.md  Dockerfile  FASTAPI_DI_MIGRATION_PLAN.md  HYBRID_DI_MIGRATION_PROGRESS.md  MANIFEST.in  MIGRATION_PLAN.md  MODULAR_MIGRATION_COMPLETE.md  PHASE_3_STRATEGY.md  PROTOCOL_IMPLEMENTATION_PLAN.md  PROTOCOL_IMPLEMENTATION_SUMMARY.md  PURE_DI_CONVERSION_PLAN.md  README.md  REGISTRY_IMPLEMENTATION_PLAN.md  SESSION_LIFECYCLE_ISSUES.md  TYPE_IGNORE_ELIMINATION_PLAN.md  WSL_IMPLEMENTATION_PLAN.md  add_init_files.py  alembic.ini  analysis_hybrid_di_usage.md  coupling_analysis.md  debug_tasks.py  docker-compose.yml  fix_imports.py  fix_test_patches.py  job_html_renderer.py  lint.py  manage_db.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  reset_db.py  run.py  start.sh  test_unified_job_manager.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  release.yml
alembic/: env.py
alembic/versions/: 12c78859e391_fix_task_order_constraint_to_allow_zero_.py  3e16f40409fc_add_database_constraints_and_.py  9ed408182d00_initial_database_schema.py  9fbc1630d7e8_add_provider_config_json_column_to_.py  d930de046be6_migrate_cloud_sync_configs_to_json_.py  eff6fe73191d_remove_job_type_constraints_to_allow_.py
app/: config.py  dependencies.py  dependencies_clean.py  dependencies_services.py  main.py  startup.py
app/api/: auth.py  backups.py  cleanup.py  cloud_backup.py  cloud_sync.py  debug.py  jobs.py  jobs_old.py  notifications.py  repositories.py  repository_check_configs.py  repository_stats.py  schedules.py  shared.py  sync.py  tabs.py
app/models/: database.py  enums.py  repository_dtos.py  schemas.py
app/services/: archive_manager.py  archive_mount_manager.py  backup_executor.py  backup_service.py  borg_command_builder.py  borg_service.py  borg_service_old.py  cleanup_service.py  cloud_backup_coordinator.py  cloud_sync_manager.py  cloud_sync_service.py  composite_job_manager.py  configuration_service.py  debug_service.py  docker_service.py  docker_service_old.py  implementations.py  interfaces.py  job_database_manager.py  job_event_broadcaster.py  job_executor.py  job_manager.py  job_manager_dependencies.py  job_manager_modular.py  job_output_manager.py  job_queue_manager.py  job_render_service.py  job_service.py  job_stream_service.py  pushover_service.py  rclone_service.py  recovery_service.py  repository_check_config_service.py  repository_parser.py  repository_service.py  repository_stats_service.py  scheduler_service.py  simple_borg_service.py  simple_command_runner.py  task_definition_builder.py  (+2 more)
app/static/: .gitkeep
app/templates/: base.html  index.html  login.html
app/testing/: fakes.py
app/utils/: db_session.py  migration_add_source_path.py  migrations.py  path_prefix.py  secure_path.py  security.py  template_responses.py  version.py
examples/: factory_usage_examples.py
sandbox_fastapi/: alembic.ini  requirements.txt
sandbox_fastapi/alembic/: env.py
sandbox_fastapi/app/: __init__.py  dependencies.py  main.py
sandbox_fastapi/templates/: base.html  index.html
sandbox_fastapi/tests/: conftest.py  fakes.py  test_clean_architecture.py  test_perfect_implementation.py
src/: config.py  dependencies.py  main.py
src/api/: auth.py  backups.py  cleanup.py  cloud_sync.py  debug.py  jobs.py  notifications.py  repositories.py  repository_check_configs.py  repository_stats.py  schedules.py  shared.py  sync.py  tabs.py
src/borgitory/: cli.py  config_module.py  dependencies.py  main.py
src/models/: database.py  repository_dtos.py  schemas.py
src/services/: borg_command_builder.py  borg_service.py  cleanup_service.py  cloud_backup_coordinator.py  cloud_sync_manager.py  cloud_sync_service.py  configuration_service.py  cron_description_service.py  debug_service.py  rclone_service.py  recovery_service.py  task_definition_builder.py
src/templates/: base.html  login.html
src/utils/: db_session.py  migrate_cloud_configs.py  migrations.py  path_prefix.py  secure_path.py  security.py  template_responses.py
tests/: conftest.py  test_archive_browser_htmx.py  test_archive_manager.py  test_archive_mount_manager.py  test_auth_htmx.py  test_auth_redirect_flow.py  test_backups_api.py  test_basic.py  test_borg_command_builder.py  test_borg_service.py  test_borg_service_core.py  test_clean_di_proof_of_concept.py  test_cleanup.py  test_cleanup_api.py  test_cleanup_service.py  test_cloud_backup_coordinator.py  test_cloud_sync.py  test_cloud_sync_api.py  test_cloud_sync_manager.py  test_cloud_sync_service.py  test_composite_job_manager.py  test_cron_description_service.py  test_database_models.py  test_datetime_utils.py  test_debug_service.py  test_dependencies.py  test_di_testing_infrastructure.py  test_fixed_import_with_clean_di.py  test_interface_mocking.py  test_interfaces_validation.py  test_job_database_manager.py  test_job_event_broadcaster.py  test_job_executor.py  test_job_manager.py  test_job_manager_modular.py  test_job_manager_modular_comprehensive.py  test_job_manager_proper_di.py  test_job_output_manager.py  test_job_render_service.py  test_job_service.py  (+41 more)
tests/archives/: test_archive_browser_htmx.py  test_archive_manager.py  test_archive_manager_caching.py  test_archive_mount_manager.py
tests/auth/: test_auth_htmx.py  test_auth_redirect_flow.py  test_main_login_page.py
tests/backups/: test_backup_executor.py  test_backup_service.py
tests/borg/: test_borg_command_builder.py  test_borg_service.py  test_borg_service_core.py
tests/cloud_providers/: __init__.py  test_backward_compatibility.py  test_config_service.py  test_display_details.py  test_factory.py  test_integration.py  test_job_executor.py  test_orchestration.py  test_provider_validation.py  test_rclone_integration.py  test_registry.py  test_registry_integration.py  test_s3_provider.py  test_s3_provider_config.py  test_schema_validation.py  test_service.py  test_sftp_provider.py  test_smb_storage.py  test_storage.py  test_types.py
(+706 files in other folders)
